Fix bottom spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,6 @@
 body,
 html {
   background-color: #e6eff5;
+  margin: 0;
+  padding-bottom: 12rem;
 }
